--- a/templates/vote.ejs
+++ b/templates/vote.ejs
@@ -1,57 +1,159 @@
 <div id="inline-vote-settings">
+    <div id="inline-vote-title" data-l10n-id="ep_inline_voting.title_create_vote">Create a mini-vote</div>
+    <div class="close-inline-vote-modal"></div>
     <div id="settings-content">
-        <div id="vote-title-wrap"><label for="vote-title" data-l10n-id="ep_inline_voting.vote_title_label">Insert vote description</label><textarea id="vote-title" name="vote-title"></textarea></div>
+        <div id="vote-description-wrap"><textarea id="vote-description" rows="1" data-l10n-id="ep_inline_voting.vote_title_label" name="vote-description" placeholder="Insert vote description"></textarea></div>
         <div id="vote-options-wrap">
-            <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-1" name="vote-option-1"/></div>
-            <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-2" name="vote-option-2"/></div>
+            <div id="vote-options-wrap-title">Define vote options</div>
+            <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-1" name="vote-option-1"/><div class="remove-vote-option"></div></div>
+            <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-2" name="vote-option-2"/><div class="remove-vote-option"></div></div>
+            <div class="option-wrap">
+                <a id="inline-vote-add-option"><span class="oval">+</span><span data-l10n-id="ep_inline_voting.add_option">Add another vote option</span></a>
+            </div>
         </div>
-        <div id="vote-settings-options-wrapper">
+        <!--div id="vote-settings-options-wrapper">
             <div class="option-wrap">
                 <label for="replace">
                     <span data-l10n-id="ep_inline_voting.settings_replace">Replace selection with vote result value</span>
                     <input id="vote_settings_replace" type="checkbox" name="replace" value="replace">
                 </label>
             </div>
-            <!--div class="option-wrap">
+            <div class="option-wrap">
                 <label for="set_deadline">
                     <span data-l10n-id="ep_inline_voting.settings_set_deadline">Set deadline</span>
                     <input id="vote_settings_set_deadline" type="checkbox" name="set_deadline" value="set_deadline">
                 </label>
-            </div-->
-        </div>
+            </div>
+        </div -->
         <div id="vote-settings-buttons-wrap">
             <div class="vote-settings-button">
-                <button id="add-option-vote" data-l10n-id="ep_inline_voting.add_option">Add Option</button>
+                <button id="cancel-vote" data-l10n-id="ep_inline_voting.cancel">Cancel</button>
             </div>
             <div class="vote-settings-button">
                 <button id="start-vote" data-l10n-id="ep_inline_voting.start_vote">Start Vote</button>
-            </div>
-            <div class="vote-settings-button">
-                <button id="cancel-vote" data-l10n-id="ep_inline_voting.cancel">Cancel</button>
             </div>
         </div>
     </div>
 </div>
 <!--Form with options-->
 <div id="inline-vote-form">
-    <div>
-        <ul id="vote-options-list">
-            <% for (var i = 0; i < options.length; i++) { %>
-                    <% for (var j = 0; j < options[i].length; j++) { %>
-                            <li class="inline-vote-option"><button class="inline-vote-option-button" click="vote(<%- options[i][j] %>)" name="option" value="<%- options[i][j] %>"><%- options[i][j] %></button></li>
-                    <% } %>
-            <% } %>
-        </ul>
+    <div id="inline-vote-title" data-l10n-id="ep_inline_voting.title_create_vote">Mini-vote</div>
+    <div class="close-inline-vote-modal"></div>
+    <div class="separator"></div>
+    <div id="inline-vote-description-wrap">
+        <div id="inline-vote-description">
+            <div id="description-creator">
+                <span id="creator-name">Danaerys Targaryen</span><span class="vertical-line">|</span><span id="create-time">16/10/2019</span>
+            </div>
+            <div id="description-content">
+                Description content
+            </div>
+        </div>
+    </div>
+    <div id="settings-content">
+        <div id="vote-description-wrap"><div id="vote-description-content"></div></div>
+        <div id="vote-options-wrap">
+            <div id="vote-options-wrap-title">Define vote options</div>
+            <div id="vote-options-list">
+                <div class="option-wrap">
+                    <div class="option-result-bar-wrap">
+                        <label class="container">
+                            <input class="vote-option-radio" type="radio" name="vote-option">
+                            <span class="checkmark"></span>                    
+                            <div class="option-result-bar">
+                                <div class="option-result-fill">
+                                    <div class="option-result-votes">10</div>
+                                </div>
+                            </div>
+                        </label>
+                    <div class="option-value">Option 1</div>
+                    </div>
+                </div>
+                <div class="option-wrap">
+                    <div class="option-result-bar-wrap">
+                        <label class="container">
+                            <input class="vote-option-radio" type="radio" name="vote-option">
+                            <span class="checkmark"></span>                    
+                            <div class="option-result-bar"><div class="option-result-fill"><div class="option-result-votes">10</div></div></div>
+                        </label>
+                        <div class="option-value">Option 2</div>
+                    </div>
+                </div>
+            </div>
+            <!--div class="option-wrap">
+                <a id="inline-vote-add-option"><span class="oval">+</span><span data-l10n-id="ep_inline_voting.add_option">Add another vote option</span></a>
+            </div-->
+        </div>
+        <div id="vote-settings-buttons-wrap">
+            <div class="vote-settings-button">
+                <button id="edit-vote" data-l10n-id="ep_inline_voting.edit">Edit</button>
+            </div>
+            <div class="vote-settings-button">
+                <button id="close-vote" data-l10n-id="ep_inline_voting.close_vote">Close Vote</button>
+            </div>
+        </div>
     </div>
 </div>
 
-<!--Vote results-->
-<div id="inline-vote-results">
-    <div>
-        <ul id="vote-result-options-list">
-        </ul>
+
+<!-- LIGHTBOX SKELETON -->
+<div id="root_lightbox">
+    <div id="lightbox" class="id_signing delete_topic wide_lightbox">
+        <div id="lightbox_wrap">
+
+            <div class="lightbox_content">
+
+                <div class="second_header">
+
+                    <div class="sprite sprite-icon-delete-topic2x"></div>
+                    <div class="delete_title" translate="MODALS.TOPIC_DELETE_CONFIRM_TXT_ARE_YOU_SURE">Do you want to overwrite the selection?</div>
+                    <div class="delete_description" translate="MODALS.TOPIC_DELETE_CONFIRM_TXT_NO_UNDO">Use the winning vote as a replacement for the selected text.</div>
+
+                    <div id="lightbox_close" click="closeThisDialog()">
+                        <div class="table_cell">
+                            <div class="sprite sprite-btn-popup-close2x">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="line_wrap">
+                    <div class="line lightest_line"></div>
+                </div>
+
+                <div id="delete_info_wrap">
+
+                    <div class="delete_info_text_wrap">
+                        <div class="delete_info">
+                            <div class="delete_info_text"><b>Original: </b><br><span id="vote_selected_text">Default</span></div>
+                        </div>
+
+                        <div class="delete_info">
+                            <div class="delete_info_text"><b>Replacement </b><br><span id="vote_winner_text">A preselected option adopted by a computer program or other mechanism when no alternative is specified by the user or programmer </span></div>
+                        </div>
+                    </div>
+
+                    <div class="delete_info_button_wrap">
+
+                        <div class="table_cell">
+                            <div id="vote_button_keep" class="blue_button no" translate="MODALS.TOPIC_DELETE_CONFIRM_NO">NO, KEEP THE ORIGINAL</div>
+                        </div>
+
+                        <div class="table_cell">
+                            <div id="vote_button_replace" class="blue_button yes" ng-click="confirm()" translate="MODALS.TOPIC_DELETE_CONFIRM_YES">YES, OVERWRITE</div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
     </div>
-    <div id="vote-result-buttons">
-        <button id="close-vote">Close vote</button>
-    </div>
+
+    <div id="close_lightbox" ng-click="closeThisDialog()"></div>
+
 </div>
+    
