--- a/templates/vote.ejs
+++ b/templates/vote.ejs
@@ -4,7 +4,7 @@
     <div id="settings-content">
         <div id="vote-description-wrap"><textarea id="vote-description" rows="1" data-l10n-id="ep_inline_voting.vote_title_label" name="vote-description" placeholder="Insert vote description"></textarea></div>
         <div id="vote-options-wrap">
-            <div id="vote-options-wrap-title">Define vote options</div>
+            <div id="vote-options-wrap-title" data-l10n-id="ep_inline_voting.define_vote_options">Define vote options</div>
             <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-1" name="vote-option-1"/><div class="remove-vote-option"></div></div>
             <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-2" name="vote-option-2"/><div class="remove-vote-option"></div></div>
             <div class="option-wrap">
@@ -37,13 +37,13 @@
 </div>
 <!--Form with options-->
 <div id="inline-vote-form">
-    <div id="inline-vote-title" data-l10n-id="ep_inline_voting.title_create_vote">Mini-vote</div>
+    <div id="inline-vote-title" data-l10n-id="ep_inline_voting.title_vote">Mini-vote</div>
     <div class="close-inline-vote-modal"></div>
     <div class="separator"></div>
     <div id="inline-vote-description-wrap">
         <div id="inline-vote-description">
             <div id="description-creator">
-                <span id="creator-name">Danaerys Targaryen</span><span class="vertical-line">|</span><span id="create-time">16/10/2019</span>
+                <span id="creator-name">Danaerys Targaryen</span><span class="vertical-line">|</span><span id="create-time">16/10/2019</span> | <span id="vote-count" data-l10n-id="ep_inline_voting.total_votes" data-l10n-args='{ "count": "0"}'>10 votes</span>
             </div>
             <div id="description-content">
                 Description content
@@ -53,7 +53,7 @@
     <div id="settings-content">
         <div id="vote-description-wrap"><div id="vote-description-content"></div></div>
         <div id="vote-options-wrap">
-            <div id="vote-options-wrap-title">Define vote options</div>
+            <div id="vote-options-wrap-title" data-l10n-id="ep_inline_voting.vote_options">Vote options</div>
             <div id="vote-options-list">
                 <div class="option-wrap">
                     <div class="option-result-bar-wrap">
@@ -85,9 +85,9 @@
             </div-->
         </div>
         <div id="vote-settings-buttons-wrap">
-            <div class="vote-settings-button">
+            <!--div class="vote-settings-button">
                 <button id="edit-vote" data-l10n-id="ep_inline_voting.edit">Edit</button>
-            </div>
+            </div-->
             <div class="vote-settings-button">
                 <button id="close-vote" data-l10n-id="ep_inline_voting.close_vote">Close Vote</button>
             </div>
@@ -106,8 +106,8 @@
                 <div class="second_header">
 
                     <div class="sprite sprite-icon-delete-topic2x"></div>
-                    <div class="delete_title" translate="MODALS.TOPIC_DELETE_CONFIRM_TXT_ARE_YOU_SURE">Do you want to overwrite the selection?</div>
-                    <div class="delete_description" translate="MODALS.TOPIC_DELETE_CONFIRM_TXT_NO_UNDO">Use the winning vote as a replacement for the selected text.</div>
+                    <div class="delete_title" data-l10n-id="ep_inline_voting.overwrite_the_selection">Do you want to overwrite the selection?</div>
+                    <div class="delete_description" data-l10n-id="ep_inline_voting.use_winning_vote_as_replacement">Use the winning vote as a replacement for the selected text.</div>
 
                     <div id="lightbox_close" click="closeThisDialog()">
                         <div class="table_cell">
@@ -126,22 +126,22 @@
 
                     <div class="delete_info_text_wrap">
                         <div class="delete_info">
-                            <div class="delete_info_text"><b>Original: </b><br><span id="vote_selected_text">Default</span></div>
+                            <div class="delete_info_text"><b data-l10n-id="ep_inline_voting.original">Original: </b><br><span id="vote_selected_text">Default</span></div>
                         </div>
 
                         <div class="delete_info">
-                            <div class="delete_info_text"><b>Replacement </b><br><span id="vote_winner_text">A preselected option adopted by a computer program or other mechanism when no alternative is specified by the user or programmer </span></div>
+                            <div class="delete_info_text"><b data-l10n-id="ep_inline_voting.replacement">Replacement </b><br><span id="vote_winner_text">A preselected option adopted by a computer program or other mechanism when no alternative is specified by the user or programmer </span></div>
                         </div>
                     </div>
 
                     <div class="delete_info_button_wrap">
 
                         <div class="table_cell">
-                            <div id="vote_button_keep" class="blue_button no" translate="MODALS.TOPIC_DELETE_CONFIRM_NO">NO, KEEP THE ORIGINAL</div>
+                            <div id="vote_button_keep" class="blue_button no" data-l10n-id="ep_inline_voting.no_keep_the_original">NO, KEEP THE ORIGINAL</div>
                         </div>
 
                         <div class="table_cell">
-                            <div id="vote_button_replace" class="blue_button yes" ng-click="confirm()" translate="MODALS.TOPIC_DELETE_CONFIRM_YES">YES, OVERWRITE</div>
+                            <div id="vote_button_replace" class="blue_button yes" ng-click="confirm()" data-l10n-id="ep_inline_voting.yes_overwrite">YES, OVERWRITE</div>
                         </div>
 
                     </div>
