fix description and creator info

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,7 +77,7 @@
     margin: 0 20px;
 }
 
-#vote-description {
+#vote-description-area {
     border: 1px solid #E5E5E5;
     border-radius: 4px;
     background-color: #FFFFFF;
