--- a/templates/vote.ejs
+++ b/templates/vote.ejs
@@ -2,7 +2,7 @@
     <div id="inline-vote-title" data-l10n-id="ep_inline_voting.title_create_vote">Create a mini-vote</div>
     <div class="close-inline-vote-modal"></div>
     <div id="settings-content">
-        <div id="vote-description-wrap"><textarea id="vote-description" rows="1" data-l10n-id="ep_inline_voting.vote_title_label" name="vote-description" placeholder="Insert vote description"></textarea></div>
+        <div id="vote-description-wrap"><textarea id="vote-description-area" rows="1" name="vote-description" placeholder="Insert vote description"></textarea></div>
         <div id="vote-options-wrap">
             <div id="vote-options-wrap-title" data-l10n-id="ep_inline_voting.define_vote_options">Define vote options</div>
             <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-1" name="vote-option-1"/><div class="remove-vote-option"></div></div>
