Update UX for voting

--- a/templates/vote.ejs
+++ b/templates/vote.ejs
@@ -85,11 +85,14 @@
             </div-->
         </div>
         <div id="vote-settings-buttons-wrap">
-            <!--div class="vote-settings-button">
-                <button id="edit-vote" data-l10n-id="ep_inline_voting.edit">Edit</button>
-            </div-->
+            <div class="vote-settings-button">
+                <button id="cancel-voting" data-l10n-id="ep_inline_voting.cancel">Cancel</button>
+            </div>
             <div class="vote-settings-button">
                 <button id="close-vote" data-l10n-id="ep_inline_voting.close_vote">Close Vote</button>
+            </div>
+            <div class="vote-settings-button">
+                <button id="save-vote" data-l10n-id="ep_inline_voting.vote">Vote</button>
             </div>
         </div>
     </div>
