--- a/static/css/style.css
+++ b/static/css/style.css
@@ -237,7 +237,7 @@
 #vote-settings-buttons-wrap .vote-settings-button {
     display: inline-block;
 }
-#start-vote, #close-vote {
+#start-vote, #save-vote {
     border: 1px solid #0574E3;
     background-color: #0680FC;
     color: #FFFFFF;
@@ -249,7 +249,21 @@
     border-radius: 4px;    
     padding: 5px 15px 5px 15px;
 }
-#cancel-vote, #edit-vote {
+
+#close-vote {
+    border: 1px solid #e6193b;
+    background-color: #ff1d42;
+    color: #FFFFFF;
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 20px;
+    text-align: center;    
+    border-radius: 4px;    
+    padding: 5px 15px 5px 15px;
+}
+
+#cancel-vote, #cancel-voting, #edit-vote {
     padding: 5px 15px 5px 15px;
     color: #0680FC;
     font-family: "Open Sans";
