Fix closed voting behaviour

--- a/templates/vote.ejs
+++ b/templates/vote.ejs
@@ -84,7 +84,7 @@
                 <a id="inline-vote-add-option"><span class="oval">+</span><span data-l10n-id="ep_inline_voting.add_option">Add another vote option</span></a>
             </div-->
         </div>
-        <div id="vote-settings-buttons-wrap">
+        <div id="vote-form-buttons-wrap">
             <div class="vote-settings-button">
                 <button id="cancel-voting" data-l10n-id="ep_inline_voting.cancel">Cancel</button>
             </div>
