--- a/static/css/style.css
+++ b/static/css/style.css
@@ -234,7 +234,7 @@
     background: #2BE0AA;
 
   }
-#vote-settings-buttons-wrap .vote-settings-button {
+#vote-settings-buttons-wrap .vote-settings-button, #vote-form-buttons-wrap .vote-settings-button {
     display: inline-block;
 }
 #start-vote, #save-vote {
@@ -287,7 +287,7 @@
     margin: 10px 20px;
 }
             
-#vote-settings-buttons-wrap {
+#vote-settings-buttons-wrap, #vote-form-buttons-wrap {
     text-align: right;
     padding: 20px;
 }
