--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,7 +40,7 @@
 
 #inline-vote-title {
     color: #252525;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 20px;
     font-weight: bold;
     line-height: 20px;
@@ -66,7 +66,7 @@
 }
 #vote-options-wrap-title {
 	color: #252525;
-	font-family: "Open Sans";
+	font-family: "Noto Sans",  sans-serif;
 	font-size: 14px;
 	font-weight: bold;
     line-height: 20px;
@@ -83,7 +83,7 @@
     background-color: #FFFFFF;
     opacity: 0.7;
     color: #252525;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 13px;
     line-height: 20px;
     padding: 5px;
@@ -93,7 +93,7 @@
 	height: 20px;
 	width: 160px;
 	color: #0680FC;
-	font-family: "Open Sans";
+	font-family: "Noto Sans",  sans-serif;
 	font-size: 14px;
 	line-height: 20px;
 }
@@ -114,7 +114,7 @@
 	border-radius: 4px;
     background-color: #FFFFFF;
     color: #252525;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 13px;
     line-height: 20px;
     padding: 5px;
@@ -133,7 +133,7 @@
 }
 
 .option-result-fill {
-    background: #ccc;
+    background-image: url(pattern.png);
     height: 100%;
     width: 24%;
     position: relative;
@@ -151,13 +151,13 @@
     margin: 20px 0 10px 0;
     opacity: 0.7;
     color: #252525;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 13px;
     line-height: 18px;
 }
 #description-content {
     color: #252525;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 13px;
     line-height: 20px;
 }
@@ -210,6 +210,7 @@
 
   .container input:checked ~ .option-result-bar .option-result-fill {
     background-color: #2BE0AA;
+    background-image: none;
   }
 
   /* Create the indicator (the dot/circle - hidden when not checked) */
@@ -241,7 +242,7 @@
     border: 1px solid #0574E3;
     background-color: #0680FC;
     color: #FFFFFF;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 14px;
     font-weight: bold;
     line-height: 20px;
@@ -254,7 +255,7 @@
     border: 1px solid #e6193b;
     background-color: #ff1d42;
     color: #FFFFFF;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 14px;
     font-weight: bold;
     line-height: 20px;
@@ -266,7 +267,7 @@
 #cancel-vote, #cancel-voting, #edit-vote {
     padding: 5px 15px 5px 15px;
     color: #0680FC;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 14px;
     line-height: 20px;
     text-align: right;
@@ -310,14 +311,14 @@
     position: absolute;
     right: -110px;
     color: #252525;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 13px;
     font-weight: bold;
     line-height: 18px;
 }
 .option-value {
     margin: 10px 10px 30px 40px;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 13px;
     line-height: 15px;
 }
@@ -328,7 +329,7 @@
     position: relative;
     top: -22px;
     left: 30px;
-    font-family: "Open Sans";
+    font-family: "Noto Sans",  sans-serif;
     font-size: 13px;
     line-height: 15px;
 }
