Update styles to work with 1.8.4

--- a/templates/vote.ejs
+++ b/templates/vote.ejs
@@ -1,6 +1,6 @@
-<div id="inline-vote-settings">
-    <div id="inline-vote-title" data-l10n-id="ep_inline_voting.title_create_vote">Create a mini-vote</div>
-    <div class="close-inline-vote-modal"></div>
+<div id="inline-vote-settings" class="popup popup-content">
+    <h1 id="inline-vote-title" data-l10n-id="ep_inline_voting.title_create_vote">Create a mini-vote</h1>
+    <div class="close_popup"></div>
     <div id="settings-content">
         <div id="vote-description-wrap"><textarea id="vote-description-area" rows="1" name="vote-description" placeholder="Insert vote description"></textarea></div>
         <div id="vote-options-wrap">
@@ -26,40 +26,35 @@
             </div>
         </div -->
         <div id="vote-settings-buttons-wrap">
-            <div class="vote-settings-button">
-                <button id="cancel-vote" data-l10n-id="ep_inline_voting.cancel">Cancel</button>
-            </div>
-            <div class="vote-settings-button">
-                <button id="start-vote" data-l10n-id="ep_inline_voting.start_vote">Start Vote</button>
-            </div>
+            <button id="cancel-vote" class="btn-default" data-l10n-id="ep_inline_voting.cancel">Cancel</button>
+            <button id="start-vote" class="btn-primary" data-l10n-id="ep_inline_voting.start_vote">Start Vote</button>
         </div>
     </div>
 </div>
 <!--Form with options-->
-<div id="inline-vote-form">
-    <div id="inline-vote-title" data-l10n-id="ep_inline_voting.title_vote">Mini-vote</div>
-    <div class="close-inline-vote-modal"></div>
-    <div class="separator"></div>
+<div id="inline-vote-form" class="popup popup-content">
+    <h1 id="inline-vote-title" data-l10n-id="ep_inline_voting.title_vote">Mini-vote</h1>
+    <div class="close_popup"></div>
     <div id="inline-vote-description-wrap">
         <div id="inline-vote-description">
-            <div id="description-creator">
+            <p id="description-creator">
                 <span id="creator-name">Danaerys Targaryen</span><span class="vertical-line">|</span><span id="create-time">16/10/2019</span> | <span id="vote-count" data-l10n-id="ep_inline_voting.total_votes" data-l10n-args='{ "count": "0"}'>10 votes</span>
-            </div>
-            <div id="description-content">
+            </p>
+            <p id="description-content">
                 Description content
-            </div>
+            </p>
         </div>
     </div>
     <div id="settings-content">
         <div id="vote-description-wrap"><div id="vote-description-content"></div></div>
         <div id="vote-options-wrap">
-            <div id="vote-options-wrap-title" data-l10n-id="ep_inline_voting.vote_options">Vote options</div>
+            <h2 id="vote-options-wrap-title" data-l10n-id="ep_inline_voting.vote_options">Vote options</h2>
             <div id="vote-options-list">
-                <div class="option-wrap">
+                <p class="option-wrap">
                     <div class="option-result-bar-wrap">
                         <label class="container">
                             <input class="vote-option-radio" type="radio" name="vote-option">
-                            <span class="checkmark"></span>                    
+                            <span class="checkmark"></span>
                             <div class="option-result-bar">
                                 <div class="option-result-fill">
                                     <div class="option-result-votes">10</div>
@@ -68,95 +63,73 @@
                         </label>
                     <div class="option-value">Option 1</div>
                     </div>
-                </div>
-                <div class="option-wrap">
+                </p>
+                <p class="option-wrap">
                     <div class="option-result-bar-wrap">
                         <label class="container">
                             <input class="vote-option-radio" type="radio" name="vote-option">
-                            <span class="checkmark"></span>                    
+                            <span class="checkmark"></span>
                             <div class="option-result-bar"><div class="option-result-fill"><div class="option-result-votes">10</div></div></div>
                         </label>
                         <div class="option-value">Option 2</div>
                     </div>
-                </div>
+                </p>
             </div>
             <!--div class="option-wrap">
                 <a id="inline-vote-add-option"><span class="oval">+</span><span data-l10n-id="ep_inline_voting.add_option">Add another vote option</span></a>
             </div-->
         </div>
         <div id="vote-form-buttons-wrap">
-            <div class="vote-settings-button">
-                <button id="cancel-voting" data-l10n-id="ep_inline_voting.cancel">Cancel</button>
-            </div>
-            <div class="vote-settings-button">
-                <button id="close-vote" data-l10n-id="ep_inline_voting.close_vote">Close Vote</button>
-            </div>
-            <div class="vote-settings-button">
-                <button id="save-vote" data-l10n-id="ep_inline_voting.vote">Vote</button>
-            </div>
+            <button id="cancel-voting" class="btn-default" data-l10n-id="ep_inline_voting.cancel">Cancel</button>
+            <button id="close-vote" class="btn-default" data-l10n-id="ep_inline_voting.close_vote">Close Vote</button>
+            <button id="save-vote" class="btn-primary" data-l10n-id="ep_inline_voting.vote">Vote</button>
         </div>
     </div>
 </div>
 
 
 <!-- LIGHTBOX SKELETON -->
-<div id="root_lightbox">
-    <div id="lightbox" class="id_signing delete_topic wide_lightbox">
-        <div id="lightbox_wrap">
+<div id="close_confirm" class="popup popup-content">
+    <div class="close_confirm_content">
+        <div class="header">
+            <h2 class="delete_title" data-l10n-id="ep_inline_voting.overwrite_the_selection">Do you want to overwrite the selection?</h2>
+            <p class="delete_description" data-l10n-id="ep_inline_voting.use_winning_vote_as_replacement">Use the winning vote as a replacement for the selected text.</p>
 
-            <div class="lightbox_content">
-
-                <div class="second_header">
-
-                    <div class="sprite sprite-icon-delete-topic2x"></div>
-                    <div class="delete_title" data-l10n-id="ep_inline_voting.overwrite_the_selection">Do you want to overwrite the selection?</div>
-                    <div class="delete_description" data-l10n-id="ep_inline_voting.use_winning_vote_as_replacement">Use the winning vote as a replacement for the selected text.</div>
-
-                    <div id="lightbox_close" click="closeThisDialog()">
-                        <div class="table_cell">
-                            <div class="sprite sprite-btn-popup-close2x">
-                            </div>
-                        </div>
+            <div id="lightbox_close" click="closeThisDialog()">
+                <div class="table_cell">
+                    <div class="sprite sprite-btn-popup-close2x">
                     </div>
-
                 </div>
-
-                <div class="line_wrap">
-                    <div class="line lightest_line"></div>
-                </div>
-
-                <div id="delete_info_wrap">
-
-                    <div class="delete_info_text_wrap">
-                        <div class="delete_info">
-                            <div class="delete_info_text"><b data-l10n-id="ep_inline_voting.original">Original: </b><br><span id="vote_selected_text">Default</span></div>
-                        </div>
-
-                        <div class="delete_info">
-                            <div class="delete_info_text"><b data-l10n-id="ep_inline_voting.replacement">Replacement </b><br><span id="vote_winner_text">A preselected option adopted by a computer program or other mechanism when no alternative is specified by the user or programmer </span></div>
-                        </div>
-                    </div>
-
-                    <div class="delete_info_button_wrap">
-
-                        <div class="table_cell">
-                            <div id="vote_button_keep" class="blue_button no" data-l10n-id="ep_inline_voting.no_keep_the_original">NO, KEEP THE ORIGINAL</div>
-                        </div>
-
-                        <div class="table_cell">
-                            <div id="vote_button_replace" class="blue_button yes" ng-click="confirm()" data-l10n-id="ep_inline_voting.yes_overwrite">YES, OVERWRITE</div>
-                        </div>
-
-                    </div>
-
-                </div>
-
             </div>
 
         </div>
+
+        <div id="delete_info_wrap">
+            <div class="delete_info_text_wrap">
+                <div class="delete_info">
+                    <div class="delete_info_text">
+                        <h4 data-l10n-id="ep_inline_voting.original">Original: </h4>
+                        <p id="vote_selected_text">Default</p></div>
+                </div>
+
+                <div class="delete_info">
+                    <div class="delete_info_text">
+                        <h4 data-l10n-id="ep_inline_voting.replacement">Replacement </h4>
+                        <p id="vote_winner_text">A preselected option adopted by a computer program or other mechanism when no alternative is specified by the user or programmer </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="delete_info_button_wrap">
+                <button id="vote_button_keep" class="no" data-l10n-id="ep_inline_voting.no_keep_the_original">NO, KEEP THE ORIGINAL</button>
+                <button id="vote_button_replace" class="yes" data-l10n-id="ep_inline_voting.yes_overwrite">YES, OVERWRITE</button>
+            </div>
+
+        </div>
+
     </div>
 
-    <div id="close_lightbox" ng-click="closeThisDialog()"></div>
+    <div class="close_popup"></div>
 
 </div>
-    
+
