--- a/templates/vote.ejs
+++ b/templates/vote.ejs
@@ -8,7 +8,7 @@
             <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-1" name="vote-option-1"/><div class="remove-vote-option"></div></div>
             <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-2" name="vote-option-2"/><div class="remove-vote-option"></div></div>
             <div class="option-wrap">
-                <a id="inline-vote-add-option"><span class="oval">+</span><span data-l10n-id="ep_inline_voting.add_option">Add another vote option</span></a>
+                <button id="inline-vote-add-option"><span class="oval">+</span><span data-l10n-id="ep_inline_voting.add_option">Add another vote option</span></button>
             </div>
         </div>
         <!--div id="vote-settings-options-wrapper">
