--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@
     margin: 20px 0;
 }
 
-#vote-description-are {
+#vote-description-area {
     width: 100%;
     min-height: 60px;
 }
@@ -87,7 +87,7 @@
     border: 1px solid #0680FC;
     border-radius: 15px;
     text-align: center;
-    line-height: 14px;
+    line-height: 12px;
     font-size: 18px;
     margin-right: 4px;
 }
