--- a/templates/vote.ejs
+++ b/templates/vote.ejs
@@ -1,8 +1,8 @@
 <div id="inline-vote-settings" class="popup popup-content">
-    <h1 id="inline-vote-title" data-l10n-id="ep_inline_voting.title_create_vote">Create a mini-vote</h1>
+    <h1 id="inline-vote-title" data-l10n-id="ep_inline_voting.title_create_voting">Create a mini-vote</h1>
     <div class="close_popup"></div>
     <div id="settings-content">
-        <div id="vote-description-wrap"><textarea id="vote-description-area" rows="1" name="vote-description" placeholder="Insert vote description"></textarea></div>
+        <div id="vote-description-wrap"><textarea id="vote-description-area" rows="1" name="vote-description" data-l10n-id="ep_inline_voting.voting_title_label" data-l10n-args='{"placeholder": "ep_inline_voting.voting_title_label"}'></textarea></div>
         <div id="vote-options-wrap">
             <h2 id="vote-options-wrap-title" data-l10n-id="ep_inline_voting.define_vote_options">Define vote options</h2>
             <div class="option-wrap"><input class="vote-option-input" type="text" id="vote-option-1" name="vote-option-1"/><div class="remove-vote-option"></div></div>
@@ -20,7 +20,7 @@
 </div>
 <!--Form with options-->
 <div id="inline-vote-form" class="popup popup-content">
-    <h1 id="inline-vote-title" data-l10n-id="ep_inline_voting.title_vote">Mini-vote</h1>
+    <h1 id="inline-vote-title" data-l10n-id="ep_inline_voting.title_voting">Mini-vote</h1>
     <div class="close_popup"></div>
     <div id="inline-vote-description-wrap">
         <div id="inline-vote-description">
