Fix wrong translation key

--- a/templates/vote.ejs
+++ b/templates/vote.ejs
@@ -66,7 +66,7 @@
         <div id="vote-form-buttons-wrap">
             <button id="cancel-voting" class="btn-default" data-l10n-id="ep_inline_voting.cancel">Cancel</button>
             <button id="close-vote" class="btn-default" data-l10n-id="ep_inline_voting.close_vote">Close Vote</button>
-            <button id="save-vote" class="btn-primary" data-l10n-id="ep_inline_voting.vote">Vote</button>
+            <button id="save-vote" class="btn-primary" data-l10n-id="ep_inline_voting.save">Vote</button>
         </div>
     </div>
 </div>
@@ -77,7 +77,7 @@
     <div class="close_confirm_content">
         <div class="header">
             <h2 class="delete_title" data-l10n-id="ep_inline_voting.overwrite_the_selection">Do you want to overwrite the selection?</h2>
-            <p class="delete_description" data-l10n-id="ep_inline_voting.use_winning_vote_as_replacement">Use the winning vote as a replacement for the selected text.</p>
+            <p class="delete_description" data-l10n-id="ep_inline_voting.use_winning_option_as_replacement">Use the winning vote as a replacement for the selected text.</p>
 
             <div id="lightbox_close" click="closeThisDialog()">
                 <div class="table_cell">
