--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,7 @@
     top: 0px;
     float: right;
     margin-top: -22px;
+    cursor: pointer;
 }
 
 #vote-form-buttons-wrap {
@@ -78,6 +79,7 @@
 	font-family: "Noto Sans",  sans-serif;
 	font-size: 14px;
 	line-height: 20px;
+    cursor: pointer;
 }
 
 .oval {
